Passed initial 40 tests

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -16,6 +16,6 @@
 
 	<%= f.label :password %>
 	<%= f.password_field :password %>
-
-	<%= f.submit 'Create new user' %>
+	
+	<%= f.submit 'Update user profile' %>
 <% end %>
