79 passed Tests - Adding Bootstrap to site

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,17 +7,25 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-<nav>
-  <ul>
-    <% if logged_in? %>
-      <li><%= link_to 'Log Out', logout_path, method: :delete %></li>
-    <% else %>
-      <li><%= link_to 'Log In', login_path %></li>
-    <% end %>
-  </ul>
-</nav>
+  <header>
+    <div class="main container" >
+      <nav class="navbar navbar-default">
+        <ul class ="nav navbar">
+          <li><%= link_to 'Worship Together', root_path %></li>
+          <li><%= link_to 'Users', users_path %></li>
+          
+          <% if logged_in? %>
+            <li><%= link_to 'Log Out', logout_path, method: :delete %></li>
+          <% else %>
+            <li><%= link_to 'Log In', login_path %></li>
+            <li><%= link_to 'Sign Up', new_user_path %></li>
+          <% end %>
+        </ul>
+      </nav>
+    </div>
+  </header>
 <% flash.each do |type, message| %>
-	<p class="ALERT-<%= type %>"><%= message %></p>
+	<p class="alert alert-<%= type %>"><%= message %></p>
 <% end %>
 
 <%= yield %>
