--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,5 +1,5 @@
 <h1>Edit profile</h1>
-<%= render partial: 'errors' %>
+<%= render 'shared/errors', object: @user %>
 
 <%= form_for @user do |form| %>
   <%= render partial: 'fields', locals: { f: form } %>
